<resources>
    <string name="app_name">Kreasi</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_setting">Setting</string>
    <string name="title_learning_path">Data Analysis</string>
    <string name="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry</string>
    <string name="date">2024-12-13</string>
    <string name="log_out">Log out</string>
    <string name="action">Action</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="option">Option</string>
    <string name="text_email">namaemail123@gmail.com</string>
    <string name="text_name">coba nama</string>
    <string name="profile_picture">Profile Picture</string>
    <string-array name="data_name">
        <item>Machine Learning Engineer</item>
        <item>DevOps Engineer</item>
        <item>Mobile Development</item>
        <item>Backend Development</item>
        <item>Frontend Development</item>
        <item>Mohammad Hatta</item>
        <item>Soedirman</item>
        <item>Soekarno</item>
        <item>Soepomo</item>
    </string-array>
    <string-array name="data_description">
        <item>Salah seorang ulama dan khatib terkemuka di Masjid Besar Kasultanan Yogyakarta pada masa itu, dan ibu dari K.H. Ahmad Dahlan adalah puteri dari H. Ibrahim yang juga menjabat penghulu Kesultanan Ngayogyakarta Hadiningrat pada masa itu. KH. Ahmad Dahlan telah mempelopori kebangkitan ummat Islam untuk menyadari nasibnya sebagai bangsa terjajah yang masih harus belajar dan berbuat. </item>
        <item>Jenderal TNI Anumerta Ahmad Yani (juga dieja Achmad Yani; lahir di Purworejo, Jawa Tengah, 19 Juni 1922 – meninggal di Lubang Buaya, Jakarta, 1 Oktober 1965 pada umur 43 tahun) adalah komandan Tentara Nasional Indonesia Angkatan Darat, dan dibunuh oleh anggota Gerakan 30 September saat mencoba untuk menculik dia dari rumahnya.</item>
        <item>Sutomo (lahir di Surabaya, Jawa Timur, 3 Oktober 1920 – meninggal di Padang Arafah, Arab Saudi, 7 Oktober 1981 pada umur 61 tahun) lebih dikenal dengan sapaan akrab oleh rakyat sebagai Bung Tomo, adalah pahlawan yang terkenal karena peranannya dalam membangkitkan semangat rakyat untuk melawan kembalinya penjajah Belanda melalui tentara NICA, yang berakhir dengan pertempuran 10 November 1945 yang hingga kini diperingati sebagai Hari Pahlawan.</item>
        <item>Jenderal TNI (Purn.) Gatot Soebroto (lahir di Sumpiuh, Banyumas, Jawa Tengah, 10 Oktober 1907 – meninggal di Jakarta, 11 Juni 1962 pada umur 54 tahun) adalah tokoh perjuangan militer Indonesia dalam merebut kemerdekaan dan juga pahlawan nasional Indonesia. Ia dimakamkan di Ungaran, kabupaten Semarang.</item>
        <item>Raden Mas Soewardi Soerjaningrat (EBI: Suwardi Suryaningrat, sejak 1922 menjadi Ki Hadjar Dewantara, EBI: Ki Hajar Dewantara, beberapa menuliskan bunyi bahasa Jawanya dengan Ki Hajar Dewantoro; lahir di Pakualaman, 2 Mei 1889 – meninggal di Yogyakarta, 26 April 1959 pada umur 69 tahun; selanjutnya disingkat sebagai "Soewardi" atau "KHD") adalah aktivis pergerakan kemerdekaan Indonesia, kolumnis, politisi, dan pelopor pendidikan bagi kaum pribumi Indonesia dari zaman penjajahan Belanda. Ia adalah pendiri Perguruan Taman Siswa, suatu lembaga pendidikan yang memberikan kesempatan bagi para pribumi untuk bisa memperoleh hak pendidikan seperti halnya para priyayi maupun orang-orang Belanda.</item>
        <item>Dr.(HC) Drs. H. Mohammad Hatta (lahir dengan nama Mohammad Athar, dikenal sebagai Bung Hatta; lahir di Fort de Kock (sekarang Bukittinggi, Sumatera Barat), Hindia Belanda, 12 Agustus 1902 – meninggal di Jakarta, 14 Maret 1980 pada umur 77 tahun) adalah tokoh pejuang, negarawan, ekonom, dan juga Wakil Presiden Indonesia yang pertama. Ia bersama Soekarno memainkan peranan penting untuk memerdekakan bangsa Indonesia dari penjajahan Belanda sekaligus memproklamirkannya pada 17 Agustus 1945. Ia juga pernah menjabat sebagai Perdana Menteri dalam Kabinet Hatta I, Hatta II, dan RIS. Ia mundur dari jabatan wakil presiden pada tahun 1956, karena berselisih dengan Presiden Soekarno. Hatta juga dikenal sebagai Bapak Koperasi Indonesia.</item>
        <item>Jenderal Besar Raden Soedirman (EYD: Sudirman; lahir 24 Januari 1916 – meninggal 29 Januari 1950 pada umur 34 tahun) adalah seorang perwira tinggi Indonesia pada masa Revolusi Nasional Indonesia. Menjadi panglima besar Tentara Nasional Indonesia pertama, ia secara luas terus dihormati di Indonesia. Terlahir dari pasangan rakyat biasa di Purbalingga, Hindia Belanda, Soedirman diadopsi oleh pamannya yang seorang priyayi. Setelah keluarganya pindah ke Cilacap pada tahun 1916, Soedirman tumbuh menjadi seorang siswa rajin; ia sangat aktif dalam kegiatan ekstrakurikuler, termasuk mengikuti program kepanduan yang dijalankan oleh organisasi Islam Muhammadiyah. Saat di sekolah menengah, Soedirman mulai menunjukkan kemampuannya dalam memimpin dan berorganisasi, dan dihormati oleh masyarakat karena ketaatannya pada Islam. Setelah berhenti kuliah keguruan, pada 1936 ia mulai bekerja sebagai seorang guru, dan kemudian menjadi kepala sekolah, di sekolah dasar Muhammadiyah; ia juga aktif dalam kegiatan Muhammadiyah lainnya dan menjadi pemimpin Kelompok Pemuda Muhammadiyah pada tahun 1937. Setelah Jepang menduduki Hindia Belanda pada 1942, Soedirman tetap mengajar. Pada tahun 1944, ia bergabung dengan tentara Pembela Tanah Air (PETA) yang disponsori Jepang, menjabat sebagai komandan batalion di Banyumas. Selama menjabat, Soedirman bersama rekannya sesama prajurit melakukan pemberontakan, namun kemudian diasingkan ke Bogor.</item>
        <item>Dr.(H.C.) Ir. H. Soekarno (ER, EYD: Sukarno, nama lahir: Koesno Sosrodihardjo) (lahir di Surabaya, Jawa Timur, 6 Juni 1901 – meninggal di Jakarta, 21 Juni 1970 pada umur 69 tahun) adalah Presiden pertama Republik Indonesia yang menjabat pada periode 1945–1967. Ia memainkan peranan penting dalam memerdekakan bangsa Indonesia dari penjajahan Belanda. Ia adalah Proklamator Kemerdekaan Indonesia (bersama dengan Mohammad Hatta) yang terjadi pada tanggal 17 Agustus 1945. Soekarno adalah yang pertama kali mencetuskan konsep mengenai Pancasila sebagai dasar negara Indonesia dan ia sendiri yang menamainya.</item>
        <item>Prof. Mr. Dr. Soepomo (Ejaan Soewandi: Supomo; lahir di Sukoharjo, Jawa Tengah, 22 Januari 1903 – meninggal di Jakarta, 12 September 1958 pada umur 55 tahun) adalah seorang pahlawan nasional Indonesia. Soepomo dikenal sebagai arsitek Undang-undang Dasar 1945, bersama dengan Muhammad Yamin dan Soekarno.</item>
    </string-array>
    <string-array name="data_date">
        <item>2024-12-12</item>
        <item>2024-11-12</item>
        <item>2024-10-12</item>
        <item>2024-9-12</item>
        <item>2024-8-12</item>
        <item>2024-7-12</item>
        <item>2024-6-12</item>
        <item>2024-5-12</item>
        <item>2024-4-12</item>
        <item>2024-3-12</item>
    </string-array>
    <string-array name="header_data">
        <item>Get Started with Python</item>
        <item>Go Beyond the Numbers: Translate Data into Insights</item>
        <item>Machine Learning Data Lifecycle in Production</item>
        <item>Analyze Datasets and Train ML Models using AutoML</item>
        <item>Practical Data Science on the AWS Cloud</item>
        <item>Machine Learning Engineering for Production (MLOps)</item>
        <item>Google Advanced Data Analytics</item>
        <item>Foundations of Data Science</item>
        <item>Advanced Data Science with IBM</item>
        <item>Advanced Valuation and Strategy - M&amp;A, Private Equity, and Venture Capital</item>
        <item>Data Warehousing for Business Intelligence</item>
    </string-array>
    <string-array name="child_data_0">
        <item>Computer Programming</item>
        <item>Data Analysis</item>
        <item>Python Programming</item>
    </string-array>
    <string-array name="child_data_1">
        <item>Data Analysis</item>
        <item>Exploratory Data Analysis</item>
        <item>Python Programming</item>
        <item>Tableau Software</item>
    </string-array>
    <string-array name="child_data_2">
        <item>Python Programming</item>
        <item>Statistical Programming</item>
        <item>Tensorflow</item>
        <item>Exploratory Data Analysis</item>
        <item>Feature Engineering</item>
        <item>Machine Learning</item>
        <item>Probability &amp; Statistics</item>
    </string-array>
    <string-array name="child_data_3">
        <item>Amazon Web Services</item>
        <item>Exploratory Data Analysis</item>
    </string-array>
    <string-array name="child_data_4">
        <item>Amazon Web Services</item>
        <item>Exploratory Data Analysis</item>
    </string-array>
    <string-array name="child_data_5">
        <item>Machine Learning</item>
        <item>Applied Machine Learning</item>
        <item>Python Programming</item>
        <item>Statistical Programming</item>
        <item>Tensorflow</item>
        <item>DevOps</item>
        <item>Devops Tools</item>
        <item>Exploratory Data Analysis</item>
        <item>Feature Engineering</item>
        <item>Machine Learning Software</item>
        <item>Probability &amp; Statistics</item>
        <item>Cloud Computing</item>
        <item>Deep Learning</item>
        <item>Google Cloud Platform</item>
        <item>Other Cloud Platforms and Tools</item>
        <item>Performance Management"," Kubernetes</item>
        <item>Leadership and Management</item>
    </string-array>
    <string-array name="child_data_6">
        <item>Communication</item>
        <item>Computer Programming</item>
        <item>Data Analysis</item>
        <item>Exploratory Data Analysis</item>
        <item>General Statistics</item>
        <item>Machine Learning</item>
        <item>Planning</item>
        <item>Probability Distribution</item>
        <item>Project Management</item>
        <item>Python Programming</item>
        <item>Regression</item>
        <item>Statistical Analysis</item>
        <item>Tableau Software</item>
    </string-array>
    <string-array name="child_data_7">
        <item>Communication</item>
        <item>CData Analysis</item>
        <item>Planning</item>
        <item>Project Management</item>
    </string-array>
    <string-array name="child_data_8">
        <item>Machine Learning</item>
        <item>Python Programming</item>
        <item>Statistical Programming</item>
        <item>Data Management</item>
        <item>Machine Learning Algorithms</item>
        <item>Deep Learning</item>
        <item>Process Analysis</item>
        <item>Data Analysis</item>
        <item>Apache</item>
        <item>Human Learning</item>
        <item>Machine Learning Software</item>
        <item>Applied Machine Learning</item>
        <item>Extract</item>
        <item>Transform</item>
        <item>Load</item>
        <item>Artificial Neural Networks</item>
        <item>Feature Engineering</item>
        <item>Application Development</item>
        <item>Probability &amp; Statistics</item>
        <item>Cloud Computing</item>
        <item>Statistical Machine Learning</item>
        <item>General Statistics</item>
        <item>IBM Cloud</item>
        <item>SQL</item>
        <item>Computer Programming</item>
        <item>Tensorflow</item>
    </string-array>
    <string name="title_login_page">Welcome to KREASI</string>
    <string name="message_login_page">Login in your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="teks_register">Don\'t have an account?</string>
    <string name="actiontoregister">" Register Now!"</string>
</resources>